         | C   C  O   O  NN  N  Q   Q  U   U  E      S        T   |
         | C      O   O  N N N  Q   Q  U   U  EEE     SSS     T   |
         | C   C  O   O  N  NN  Q  Q   U   U  E          S    T   |
         |  CCC    OOO   N   N   QQ Q   UUU   EEEEE  SSSS     T   |
         +--------------------------------------------------------+

                              Conquest HISTORY

8.1.2j (devel) 8/9/2006

       - 8.2 pre-release, barring significant issues.

       - draw a line below the shield gauge that will indicate current
         shield strength when shields are down.  This is useful for
         allowing you to check your shield's recharge status without
         having to raise them first.

       - change 'REPAIRING' icon decal color from green to cyan-ish.

       - add a conqinit man page.

       - move CLAMP() macro into conqdef.h for everyone to use.

       - fixup the cygwin build

         - update README.cygwin for current info and methods for
           enabling IPC services.

         - re-arrange the lib ordering a bit at link time so the
           stupid linker can handle libconqinit/libconquest
           dependancies (cqiInitPlanets).

       8.1.2i (devel - not released) 7/29/2006

       - fixed an old (and serious) bug that prevented phasers from
         damaging a target if it's angle was between 315 and 360 from
         your ship.  It is definitely advisable for server operators
         to upgrade to this version if you want phasers to work when
         fired within this angle range

       - fixed torpdir stuff in GL.c - should no longer get occasional
         incorrect directional torp angles.

       - changed ship textures and drawShip() to not use lower left as
         the ship's texture origin, like the other textures.

       - fix off-by-one in GL ship list.

       8.1.2h (devel - not released) 7/21/2006

       - patches from Clint Adams, putting the manpages in their proper